--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -81,7 +81,7 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             -   [Returning to some of the tensions explore in the last
                 chapter.](#returning-to-some-of-the-tensions-explore-in-the-last-chapter.)
             -   [Tensions between facilitating agency and norming
-                practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND
+                practices - REWRITE AS A WAY OF OPENING THIS TOPIC ANDThe following summary list of appendices my help orientate the reader.
                 CLOSING OFF
                 GDPS](#tensions-between-facilitating-agency-and-norming-practices---rewrite-as-a-way-of-opening-this-topic-and-closing-off-gdps)
         -   [Simple table of uses](#simple-table-of-uses)
@@ -261,9 +261,18 @@ PULL OUT AN EXAMPLE -->
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-This level of plane of activity corresponds to AT diagram 5.x / 4.x - group level. From Rogoff it examines community norms and repertoires. From Cole's work, we can frame this section as observations of GDPs role in the emerging idioculture of the game making sessions.   
+As explored in the introduction, the community plane of activity corresponds to AT diagram 5.x / 4.x - repeated below.
 
-While other community interactions existed (introductions, warm up games), playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
+
+Rogoff [] frames activity at this level as that examining community norms and repertoires, a concept also explored in Cole's work in the 5D as an emerging idioculture [].
+
+The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
+
+
+
+
+
+
 
 
 ### The role of GDPs to facilitate learners to design for others
@@ -302,7 +311,7 @@ These norming behaviours some of the informal norming behaviours that are less d
 Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts. These game design patterns (GDPs) focused on gameplay rather than code structure focus on recognisable behaviour.
 GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.
 
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
+In interpreting data there were other examples of pair partners and peers either commenting oWhile other community interactions existed (introductions, warm up games), playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. n or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
 Such use was present in 6 of the 12 video capture sessions analysed.
 
@@ -363,8 +372,6 @@ Article on intangibility of game feel.
 
 
 ### Evolution and propagation of GDPs concepts during playtesting
-
-
 
 <!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
 <!-- NOTE THIS includes NON TEMPLATED GDPs? -->
@@ -430,8 +437,9 @@ These new patterns or elements of patterns sometime introduced new concepts and 
 While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
 
 
-### Perhaps add here a very brief summary of cultural section if useful
+### Summary of cultural section - and signposting to next chapter
 
+This section has explored the use of GDPs as within strategies and processes that occur at a community level in way which demonstrate the transfer between different activity systems in a way which supports the perspective of Gutiérrez [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning.  Playtesting a medium for an a shared idioculture to emerge and as such became a significant part of pedagogy of the learning design. While the design processes directly linked implementing GDPs were one of the most significant in video data others were present. The role of playtesting and other community interactions including warm up games, session reflections are explored in relation to the development of agency in the following chapter.
 
 
 ## GDPs used in the process of guided participation (Target 2500)
