on cultural plane

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -4,7 +4,7 @@ zotero:
   scannable-cite: false # only relevant when your compiling to scannable-cite .odt
   client: zotero # defaults to zotero
   author-in-text: false # when true, enabled fake author-name-only cites by replacing it with the text of the last names of the authors
-  csl-style: harvard-manchester-metropolitan-university # pre-fill the style
+  csl-style: harvard-cite-them-right # pre-fill the style
 layout: post
 number-sections: true
 categories: chapter
@@ -137,7 +137,7 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 <!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. This chapter shifts focus to the perspectives of participants, using recorded data to interpret the varied applications of gameplay design patterns (GDPs). In doing so, it addresses the research question: How can game design patterns support the development of coding practices by novices? Chapter two summarised the use of design patterns in educational contexts. While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. The last chapter investigated iterative activity involving alterations to games at the level of gameplay design patterns as part of the mutual evolution of learning design. This evolution encompassed various forms, including supporting resources such as code examples, instructional tutorials and quick-start activities proposing micro-level code modifications. This chapter builds on that analysis, focusing on the use of GDPs in diverse mediational strategies, not only within facilitator-provided resources and scaffolds but also as part of emerging community practices and interpersonal repertoires. During data analysis, GDPs appeared in such diverse and significant forms that they became candidates for a germ cell concept.
+In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. This chapter shifts focus to the perspectives of participants, using recorded data to interpret the varied applications of gameplay design patterns (GDPs). In doing so, it addresses the research question: How can game design patterns support the development of coding practices by novices? Chapter 2 summarised software  design patterns as a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples. While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. The last chapter investigated iterative activity involving alterations to games at the level of gameplay design patterns as part of the mutual evolution of learning design. This evolution encompassed various forms, including supporting resources such as code examples, instructional tutorials and quick-start activities proposing micro-level code modifications. This chapter builds on that analysis, focusing on the use of GDPs in diverse mediational strategies, not only within facilitator-provided resources and scaffolds but also as part of emerging community practices and interpersonal repertoires. During data analysis, GDPs appeared in such diverse and significant forms that they became candidates for a germ cell concept.
 
 Regarding the structure of this chapter, it begins with a vignette of parent-child interaction during the game-making process to contextualise the findings that follow. The chapter then presents a systematic analysis of participants’ varied uses of game design patterns, drawing on detailed observations of recorded video data. For this analysis, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter four. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. These sections focus on how gameplay design patterns are utilised by parents, children and facilitators, each through the lens of the respective analytical plane. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts. This discussion considers the examples of GDP use in practice to analyse GDPs as a mid-level construct, demonstrating their utility for both educational designers and researchers.
 
@@ -261,19 +261,7 @@ PULL OUT AN EXAMPLE -->
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-As explored in the introduction, the community plane of activity corresponds to AT diagram 5.x / 4.x - repeated below.
-
-
-Rogoff [] frames activity at this level as that examining community norms and repertoires, a concept also explored in Cole's work in the 5D as an emerging idioculture [].
-
-The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
-
-
-
-
-
-
-
+Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis , the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on community activity as dynamic, examining existing and emerging norms and repertoires adapted from participants presence in other communities. 
 
 ### The role of GDPs to facilitate learners to design for others
 
@@ -294,10 +282,10 @@ AND SO? -->
 <!-- There are different levels of designing for others
 One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward. -->
 
-<!--
+<!--emonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
 NOTE #### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - -->
 
-**There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
+**There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increasemonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the ple the enjoyment of peer players.**
 
 The discussion of game challenge, specifically comments about how 'hard' participant games were a particularly common interaction during playtesting. Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of how a player jumps should feel stemming from the participants feedbcak on the feeling of lack of control over the player's character in the game.
 
@@ -307,11 +295,12 @@ These norming behaviours some of the informal norming behaviours that are less d
 <!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
 
 **Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective**
+emonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
+Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts.
 
-Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts. These game design patterns (GDPs) focused on gameplay rather than code structure focus on recognisable behaviour.
 GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.
 
-In interpreting data there were other examples of pair partners and peers either commenting oWhile other community interactions existed (introductions, warm up games), playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. n or suggesting to others that they should imagining others user experience to suggest game design alterations.
+In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
 Such use was present in 6 of the 12 video capture sessions analysed.
 
@@ -324,27 +313,14 @@ Such use was present in 6 of the 12 video capture sessions analysed.
 One premise driving my exploration in the use of gameplay features as a feature in pedagogy is that the tacit knowledge of gaming conventions of most family members is extensive even if they are not avid gamers due to the extensive influence of video game culture and experience into mainstream culture including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], in particular retro gaming [@heineman2014public]. As such, the process of facilitating ways of surfacing and working gwith such tacit knowledge aligns with Moll's concept of funds on knowledge, and if aligned, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework these funds of identity and knowledge can be seen as tools which facilitate the transfer of potentially useful concepts across the boundaries between activity systems, in this case between home activity and that happening in this game making community, with the associated inclusive benefits of working with participants home interests explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines motivations of social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets narratives, sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
 
-In the last chapter I outlined processes facilitating participants could to create and incorporate graphical, audio assets and narratives elements into their games and, referencing Appendix. briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs which aligned with the MDA (mechanics, dynamics and aesthetics) game element framework explored in Chapter 2.   
+In the last chapter I outlined processes facilitating participants could to create and incorporate graphical, audio assets and narratives elements into their games and, referencing Appendix. briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs which aligned with the MDA (mechanics, dynamics and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of patterns aesthetics, in Vignette 5 Molly and Nadine showing identification with graphical making process and the process of bringing it the game. Beyond their internal family interaction, they share this artistic flair and attention to detail into the emerging learning community.
+EXTEND OR SIGNPOST - ADD TO APPENDIX COMMENTARY  - CHECK WITH NEXT CHAPTER.
 
-Addressing the apsect of patterns aesthetics, in Vignette 5 Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
-Beyond their internal family interaction, they share this artistic flair or attention to detail into the emerging learning community.
+In addition to issues of aesthetics explored in the section above, home knowledge game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of how feedback of participants on the dynamics of Molly's game during playtesting. INSERT OTHER STATS FROM CODING?
 
-<!-- CAN THIS BE LINKED TO FORMING IDENTITY WITHIN THE COMMUNITY VIA A SPECIALISM? THERE IS DATA FROM AN INTERVIEW TO SUPPORT THIS. -->
-
-In addition to issues of aesthetics, and understandings of game challenge or mechanics explored in the section above, knowledge of key knowledge of game mechanics emerged as part of  productive cultural repertoires.
-
-
-<!-- The process has parallels in enthusiast communities. For example, in new grounds, itch.io, Scratch communities, and specialist game art sites, the sharing of graphic -->
-
-
-_Funds of knowledge from home game playing experience_
-
-In the above example, Bertie comments on Toby's game which has a dominant game experience of timed jumping, noting "Bertie: "It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?". Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to show his knowledge and analysis of gameplay patterns to this community. While his motivation is not clear, one interpretation is that Bertie could be making this contribution not only to openly share experience but also as a offering in return for his request for help which he has just made.
+Turning to game mechanics, in part two of Vignette 7, Bertie comments on Toby's game which has a dominant game experience of timed jumping: _"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"_. Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to shows his knowledge and analysis of gameplay patterns.
 
 LINK TO STATS from coding.
-
-
-_Funds of knowledge in games asset creation_ COMPRESS? OR LINK SPECIFICALLY TO GDPS
 
 
 A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
