--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -261,7 +261,7 @@ PULL OUT AN EXAMPLE -->
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis , the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on community activity as dynamic, examining existing and emerging norms and repertoires adapted from participants presence in other communities. 
+Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis , the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on cultural activity as dynamic, examining existing and emerging norms and repertoires adapted from participants presence in other communities. 
 
 ### The role of GDPs to facilitate learners to design for others
 
