on propagation and technical processes

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -261,7 +261,7 @@ PULL OUT AN EXAMPLE -->
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis , the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on cultural activity as dynamic, examining existing and emerging norms and repertoires adapted from participants presence in other communities. 
+Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis , the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on cultural activity as dynamic, examining existing and emerging norms and repertoires adapted from participants presence in other communities.
 
 ### The role of GDPs to facilitate learners to design for others
 
@@ -285,7 +285,7 @@ One is just to make a playable game experience which by design involves an imagi
 <!--emonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
 NOTE #### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - -->
 
-**There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increasemonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the ple the enjoyment of peer players.**
+**There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
 The discussion of game challenge, specifically comments about how 'hard' participant games were a particularly common interaction during playtesting. Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of how a player jumps should feel stemming from the participants feedbcak on the feeling of lack of control over the player's character in the game.
 
@@ -295,7 +295,7 @@ These norming behaviours some of the informal norming behaviours that are less d
 <!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
 
 **Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective**
-emonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
+
 Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts.
 
 GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.
@@ -343,7 +343,7 @@ Observations from video data in this study supports existing research on FoI as 
 ADD IF RELEVANT - research on funds of knowledge motives or benefits of this behaviour may include: ... -->
 
 <!--
-Article on intangibility of game feel.
+Article on intangibility of game feel.2025-1-8-DiscussionConclusion
  https://www.gamedeveloper.com/design/game-feel-the-secret-ingredient -->
 
 
@@ -352,15 +352,12 @@ Article on intangibility of game feel.
 <!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
 <!-- NOTE THIS includes NON TEMPLATED GDPs? -->
 
-**The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
 
-GDPs acted as memes and spread during playtesting in a way which enriched the idioculture and the games of participants.
 
-While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implentation of GDPs.  
+<!-- While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implementation of GDPs.   -->
+<!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
 
-In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also   used GDP concepts to request help of peers to implement GDPs in their own games.
-
-For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Toby, agreeing to show another child Bertie  how to add new levels.
+Within the emerging idioculture of the game making sessions, and during playtesting in particular, the implementation of particular GDPs by participant pairs or individuals often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants enriching the games of participants. At times participant were influenced by playing the games of others and at times they would request the direct help of peers to implement GDPs in their own games. In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
 
    Bertie: Why’s that enemy in every level
    Toby: He’s not.
@@ -377,31 +374,29 @@ For example, the work of the child to add 21 levels to their own game served as 
    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
-When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
 
-Exchanges like this show the propagation of GDPs in ways other than documentation or facilitator support. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is possible that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to ask him to do the same. Toby has become a specialist that the community can draw on [see similar research]. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
-ADD MORE EVIDENCE?
+Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
-In addition to GDPs propagating, practices associated with GDPs propagated too (cropping tool in appendix Ed).
+<!-- NOTE ADD MORE EVIDENCE? -->
 
-<!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+**Analysis:** This exchange shows the propagation of GDPs emerging FROM community playtesting very direct with the one asking another to help them directly. It is possible that Bertie's request to Toby is facilitated through noticed Toby helping Nadine and Harper add levels to their games.
 
-   Ed: How much jump speed to you have?
-   Ed: Your jump speed is massive.
-   Ed gives advice about tidying up the sprite outlines.
-   Ed: for people with background like yours You can use the “cramping tool””
-   Mark  and Ed then explain – SEE THEIR RECORDING
-   So that the background is clearer.
+Toby's emerging roles as a specialist that the community can draw on [see similar research? Barron? ].
 
-While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
+On a practical level, this and other emerging specialisms (see also that of Nadine in Vignette 5) are welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+
+<!-- The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. -->
+
+
+
 
 
 <!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
 
-ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
-eg.
+<!-- ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2. -->
 
-Analysis of the working patterns stream of the coding schema shows 4 working units relying on peer sharing, 4 on facilitator and resource help and 2 only mostly self-driven in both identification and implementation.
+
+
 
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
@@ -639,7 +634,18 @@ it is of value to link this use of GDPs terminology as part of the development o
 
 Addressing division of labour more generally, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work.
 
-Turning to the use of GDPs specifically in DoL as an organisational strategy,  structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
+Turning to the use of GDPs specificall<!--
+MOVE TO TECHNICAL IF NOT ALREADY HTERE
+Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+
+   Ed: How much jump speed to you have?
+   Ed: Your jump speed is massive.
+   Ed gives advice about tidying up the sprite outlines.
+   Ed: for people with background like yours You can use the “cramping tool””
+   Mark  and Ed then explain – SEE THEIR RECORDING
+   So that the background is clearer.
+
+While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->y in DoL as an organisational strategy,  structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
 
 <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
@@ -770,6 +776,19 @@ In Vignette 5.a, we can see that the process of changing pen colours on the grap
 References to such emerging technical practices were present in many exchanges during informal playtesting and pair interactions. In the following example a reference to a GDP is used to explain the need for the technical process.  
 
 In Vignette 5.e, after giving feedback on the jump speed Molly's game Ed sharing a process to redundant space at the edges of design sprite characters.
+
+<!--
+MOVE TO TECHNICAL IF NOT ALREADY HTERE
+Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+
+   Ed: How much jump speed to you have?
+   Ed: Your jump speed is massive.
+   Ed gives advice about tidying up the sprite outlines.
+   Ed: for people with background like yours You can use the “cramping tool””
+   Mark  and Ed then explain – SEE THEIR RECORDING
+   So that the background is clearer.
+
+While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
 
 <!-- NOTE - In vignette 4.a.5 -->
 
